feat (controllers, app.js, index.js)  Добавила соедение с БД и контроллеры для работы с ней

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
 PORT=3001
+MONGODB_CLUSTER_URL=kahootcluster.3m3er.mongodb.net
+MONGODB_CLUSTER_NAME=kahoot
+DB_NAME=Kahoot
+MONGODB_PASSWORD=k789h199
+DB_CONNECTION_URL=mongodb+srv://kahoot:k789h199@kahootcluster.3m3er.mongodb.net/Kahoot?retryWrites=true&w=majority
