--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.11",
     "@types/lodash": "^4.14.166",
     "@types/react-custom-scrollbars": "^4.0.7",
