--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.6",
     "ws": "^7.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0"
   }
 }
