--- a/client/package.json
+++ b/client/package.json
@@ -72,5 +72,6 @@
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "react-app-rewired": "^2.1.8"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
