--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,2 @@
 PORT=3001
-MONGODB_CLUSTER_URL=kahootcluster.3m3er.mongodb.net
-MONGODB_CLUSTER_NAME=kahoot
-DB_NAME=Kahoot
-MONGODB_PASSWORD=k789h199
-DB_CONNECTION_URL=mongodb+srv://kahoot:k789h199@kahootcluster.3m3er.mongodb.net/Kahoot?retryWrites=true&w=majority
+DB_CONNECTION_URL=mongodb://db:27017/kahootDb
