--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.15.4-alpine as build
+FROM node:14.15.4-alpine as build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm set progress=false && \
@@ -8,4 +8,4 @@ RUN npm run build
 
 FROM uchiru/spa-base:v0.7
 ENV BASE_PATH=/kahoot
-COPY --from=client /app/build/ /var/www/
+COPY --from=build-stage /app/build/ /var/www/
